Fixed alignment of nav-bar with the rest of the view content

--- a/ng-pet-project/src/app/app.component.css
+++ b/ng-pet-project/src/app/app.component.css
@@ -1,4 +1,13 @@
+.outer-container {
+    display:flex;
+}
+
 .nav-container {
-    max-width: 100px;
+    width: 7vw;
+    min-width: 95px;
     height: 100vh;
+}
+
+.view-content-container {
+    margin-left: 15px;
 }
